using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace InfrastructureLayer.Documents.ApplicationDocuments
{
    public class BiometricIdentificationDocument
    {
        public BiometricIdentificationDocument() { }

        //not included in prototype
    }
}
