using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace InfrastructureLayer.Documents.ApplicationDocuments
{
    public class DocumentationDataDocument
    {
        //for now i am just doing pdf formatted documents

        public DocumentationDataDocument() { }
    }
}
